[project]
name = "xai-tensorflow-keras"
version = "0.1.0"
description = "Xircuits component library for Tensorflow Keras."
authors = [{ name = "XpressAI", email = "eduardo@xpress.ai" }]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/XpressAI/xai-pytorch"
keywords = ["xircuits", "tensorflow", "keras", "deep learning", "transfer learning"]

# Xircuits-specific configurations
[tool.xircuits]
default_example_path = "examples/KerasModelPredict.xircuits"
requirements_path = "requirements.txt"