[project]
name = "xai-tensorflow-keras"
version = "0.1.0"
description = "Xircuits component library for Tensorflow Keras."
authors = [{ name = "XpressAI", email = "eduardo@xpress.ai" }]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/XpressAI/xai-pytorch"
keywords = ["xircuits", "tensorflow", "keras", "deep learning", "transfer learning"]

dependencies = [
    "tensorflow==2.17.0",
    "tensorflow-datasets==4.9.3",
    "numpy",
    "scikit-learn==1.5",
    "opencv-python",
    "tqdm",
    "pillow"
]

# Xircuits-specific configurations
[tool.xircuits]
default_example_path = "examples/TFKerasModelPredict.xircuits"
requirements_path = "requirements.txt"
